[package]
name = "schedule_module"
version = "0.1.0"
authors = ["ctrlZ233 <328825619@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }